# EpitechBachelor

bachelor/year2/PSU/PSU_2017_malloc/: .gitignore  CMakeLists.txt  Makefile  binary_32
bachelor/year2/PSU/PSU_2017_malloc/include/: my_malloc.h
bachelor/year2/PSU/PSU_2017_malloc/src/: blocks_tools.c  main_tools.c  malloc.c  tools_print.c
bachelor/year2/PSU/PSU_zappy_2017/: .gitignore  CMakeLists.txt  Makefile  zappy_ai
bachelor/year2/PSU/PSU_zappy_2017/src/clients/AI/: ACommand.cpp  ACommand.hpp  ADrone.cpp  ADrone.hpp  ArgumentsParser.cpp  ArgumentsParser.hpp  Broadcast.cpp  Broadcast.hpp  ElementMap.cpp  ElementMap.hpp  Main.cpp  Makefile  MapOperators.cpp  MapOperators.hpp  Movement.cpp  Movement.hpp  SplitUtils.cpp  SplitUtils.hpp  Tile.cpp  Tile.hpp
bachelor/year2/PSU/PSU_zappy_2017/src/clients/graphical/: Makefile
bachelor/year2/PSU/PSU_zappy_2017/src/server/: Makefile  global.c  main.c  spawn_food.c  time_management.c  xlibc.c
bachelor/year2/PSU/PSU_zappy_2017/src/server/actions/: broadcast.c  broadcast_direction.c  dump_cell.c  eject.c  fork_player.c  get_direction_eject.c  inventory.c  look.c  move_forward.c  number_unused_slots.c  set.c  start_incantation.c  take.c  turn_left.c  turn_right.c
bachelor/year2/PSU/PSU_zappy_2017/src/server/circular_buffer/: check_circular_buffer.c  circular_buffer.c
bachelor/year2/PSU/PSU_zappy_2017/src/server/communication/: receive_data.c
bachelor/year2/PSU/PSU_zappy_2017/src/server/connection/: client_communication.c  client_request.c  create_client.c  create_server.c  handle_new_clients.c  validate_connection.c
bachelor/year2/PSU/PSU_zappy_2017/src/server/doc/: doxygen.conf
bachelor/year2/PSU/PSU_zappy_2017/src/server/include/: circular_buffer.h  func_ptr.h  parser.h  zappy_server_defines.h  zappy_server_functions.h  zappy_server_macros.h  zappy_server_structs.h
bachelor/year2/PSU/PSU_zappy_2017/src/server/input/: check_command.c  check_input.c  error_msg.c  has_parameter.c  input_interpreter.c
bachelor/year2/PSU/PSU_zappy_2017/src/server/linked_lists/: create_map_linked.c  free_linked.c  players_linked.c
bachelor/year2/PSU/PSU_zappy_2017/src/server/parser/: func_ptr.c  parse_args.c
bachelor/year2/PSU/PSU_zappy_2017/src/server/players_teams/: count_players.c  create_teams.c  free_teams.c  manage_teams.c  player_dead.c  spawn_player.c
bachelor/year2/PSU/PSU_zappy_2017/src/server/queue_tasks/: manipulate_queue_tasks.c
bachelor/year2/PSU/PSU_zappy_2017/src/server/tools/: append_tools.c  dump_debug.c  maths.c  time_tools.c  tools_arrays.c
bachelor/year2/PSU/PSU_zappy_2017/tester/: zappy_tester_client  zappy_tester_clients
bachelor/year2/cpp/cpp_arcade/: .gitignore  CMakeLists.txt  Makefile  README  install.sh
bachelor/year2/cpp/cpp_arcade/doc/: Game-Rules.txt  doxygen.conf
bachelor/year2/cpp/cpp_arcade/games/: Makefile
bachelor/year2/cpp/cpp_arcade/games/Bomberman/: Bomb.cpp  Bomb.hpp  Bomberman.cpp  Bomberman.hpp  Makefile  Mob.cpp  Mob.hpp  textureBomberman.hpp
bachelor/year2/cpp/cpp_arcade/games/Qix/: Flame.cpp  Flame.hpp  Makefile  Monster.cpp  Monster.hpp  Qix.cpp  Qix.hpp  Spark.cpp  Spark.hpp  TextureQix.hpp
bachelor/year2/cpp/cpp_arcade/games/Snake/: Makefile  Snake.cpp  Snake.hpp
bachelor/year2/cpp/cpp_arcade/games/SolarFox/: Enemy.cpp  Enemy.hpp  Makefile  SolarFox.cpp  SolarFox.hpp  TextureSolarFox.hpp  Vessel.cpp  Vessel.hpp
bachelor/year2/cpp/cpp_arcade/lib/: Makefile
bachelor/year2/cpp/cpp_arcade/lib/CacaInterface/: Caca.cpp  Caca.hpp  CacaDisplay.cpp  CacaDisplay.hpp  Makefile
bachelor/year2/cpp/cpp_arcade/lib/NCurseInterface/: Makefile  NCursesDisplay.cpp  NCursesDisplay.hpp
bachelor/year2/cpp/cpp_arcade/lib/SFMLInterface/: Makefile  SFMLDisplay.cpp  SFMLDisplay.hpp
bachelor/year2/cpp/cpp_arcade/src/: CoreManager.cpp  CoreManager.hpp  IDisplay.hpp  Main.cpp  Parser.cpp  Parser.hpp
bachelor/year2/cpp/cpp_indie_studio/: .gitignore  CMakeLists.txt  configure.sh
bachelor/year2/cpp/cpp_indie_studio/cmake/: FindIrrKlang.cmake  FindIrrlicht.cmake
bachelor/year2/cpp/cpp_indie_studio/dep/include/irrlicht/: IrrCompileConfig.h
bachelor/year2/cpp/cpp_indie_studio/resource/maps/: map1.map  map2.map  map3.map  map4.map  map5.map  map6.map
bachelor/year2/cpp/cpp_indie_studio/resource/media/: CharacterAnimated.ms3d  DiamondBoots.mtl  Fire.mtl  GoldPickaxe.mtl  SteveAnimated.blend  SteveAnimatedTest.ms3d  Sugar.mtl  player.mtl  tnt.mtl  tntpack.mtl
bachelor/year2/cpp/cpp_indie_studio/resource/media/GUI/: myfont.xml
bachelor/year2/cpp/cpp_indie_studio/src/client/: Client.cpp  Client.hpp  ClientReceiveUpdate.cpp  ClientReceiveUpdate.hpp  EventReceiver.cpp  EventReceiver.hpp  KeyCodes.hpp  Main.cpp  Makefile  Parsing.cpp  Parsing.hpp  SkinPicker.hpp  Task.hpp  TaskQueue.cpp  TaskQueue.hpp
bachelor/year2/cpp/cpp_indie_studio/src/client/entities/: AEntityClient.cpp  AEntityClient.hpp  Bomb.cpp  Bomb.hpp  BombUp.cpp  BombUp.hpp  EntityFactory.cpp  EntityFactory.hpp  Fire.cpp  Fire.hpp  FireUp.cpp  FireUp.hpp  HardWall.cpp  HardWall.hpp  PierceBomb.cpp  PierceBomb.hpp  Player.cpp  Player.hpp  SoftWall.cpp  SoftWall.hpp  SpeedUp.cpp  SpeedUp.hpp  WalkThrough.cpp  WalkThrough.hpp
bachelor/year2/cpp/cpp_indie_studio/src/client/menu/: ButtonEasyAdd.cpp  ButtonEasyAdd.hpp  (+14 more)
bachelor/year2/cpp/cpp_indie_studio/src/server/: GameManager.cpp  GameManager.hpp  IADefinition.cpp  IADefinition.hpp  Main.cpp  Makefile  MapGenerator.cpp  MapGenerator.hpp  MyGlobal.cpp  MyGlobal.hpp  Node.hpp  Pathfinder.cpp  Pathfinder.hpp  ServerPackageReceiver.cpp  ServerPackageReceiver.hpp  ServerPackageSender.cpp  ServerPackageSender.hpp  TimerManager.cpp  TimerManager.hpp
bachelor/year3/IA/gomoku/: .gitignore  CMakeLists.txt  compile.py
bachelor/year3/IA/gomoku/piskvork/: _result.txt  _table.html  messages.txt  pisqpipe.cpp  state.tur  tmpOpening.txt
bachelor/year3/IA/gomoku/src/: Board.cpp  Board.hpp  Brain.cpp  Brain.hpp  Cell.cpp  Cell.hpp  CellPossibilitiesDirection.cpp  CellPossibilitiesDirection.hpp  Combination.cpp  Combination.hpp  Parser.cpp  Parser.hpp  gomoku.hpp  main.cpp
(+676 files in other folders)
